# readerfriction

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  start.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: cli.md  limits-and-anti-gaming.md  metrics-by-example.md  metrics.md  wrapper-heuristic.md
scripts/: gen_schemas.py
spec/: README.md  architecture.md  cli.md  config.md  metrics.md  requirements.md  traceability.md  wrapper-heuristic.md
spec/contracts/: explain-result.schema.json  report-result.schema.json  scan-result.schema.json  trace-result.schema.json
spec/examples/clean-flow/: expected.json  expected.md  notes.md
spec/examples/clean-flow/project/: app.py
spec/examples/fragmented-flow/: expected.json  expected.md  notes.md
spec/examples/fragmented-flow/project/: loaders.py  main.py  reducers.py  reporters.py  validators.py
spec/examples/wrapper-chain/: expected.json  expected.md  notes.md
spec/examples/wrapper-chain/project/: cli.py  db.py  handlers.py  repos.py  services.py
src/readerfriction/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/readerfriction/classify/: wrappers.py
src/readerfriction/graph/: callgraph.py  resolve.py
src/readerfriction/metrics/: context_width.py  file_jumps.py  flow_fragmentation.py  long_files.py  pass_through_ratio.py  path_select.py  score.py  thin_wrappers.py  trace_depth.py  wrapper_depth.py
src/readerfriction/parser/: ast_parse.py  discover.py  entrypoints.py
src/readerfriction/reports/: agent_prompt.py  json_report.py  markdown.py  text.py
src/readerfriction/utils/: paths.py
tests/: conftest.py  test_acceptance.py  test_bootstrap.py  test_docs.py  test_traceability.py
tests/integration/: test_cli.py
tests/unit/: test_config.py  test_models.py
tests/unit/classify/: test_wrappers.py
tests/unit/graph/: test_callgraph.py  test_resolve.py
tests/unit/metrics/: test_metrics.py
tests/unit/parser/: test_ast_parse.py  test_discover.py  test_entrypoints.py
tests/unit/reports/: test_reports.py
